--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+:root {
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,5 +14,8 @@
 html,
 body {
   max-width: 100vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   overflow-x: hidden;
 }
