--- a/src/ui/titles.module.css
+++ b/src/ui/titles.module.css
@@ -1,14 +1,16 @@
 .container {
   display:grid;
-  grid-template-columns: repeat(6, minmax(150px, 1fr));
+  grid-template-columns: repeat(6, minmax(180px, 1fr));
   gap: 16px;
-  padding: 5vw 15vh;
+  padding: 5vh 15vw;
 }
 
-@media (max-width: 1366px) {
+@media (max-width: 768px) {
   .container {
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     gap: 16px;
+    justify-content: center;
+    align-items: center;
   }
 }
