feat: add api call and various changes

--- a/src/ui/header.module.css
+++ b/src/ui/header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   background: linear-gradient(#3097f7, #0364f4);
   height: 5.5dvh;
-  padding: 0 15vw;
+  padding: 1vh 15vw;
   align-items: center;
   justify-content: space-between;
   box-shadow: 2px 0;
@@ -13,6 +13,7 @@
 .h3,
 .h4 {
   color: white;
+  font-weight: 500;
 }
 
 .div {
@@ -38,5 +39,6 @@
 @media (max-width: 1366px) {
   .header {
     height: 7dvh;
+    padding: 2vh 15vw;
   }
 }
