--- a/src/ui/header.module.css
+++ b/src/ui/header.module.css
@@ -1,11 +1,14 @@
 .header {
   display: flex;
   background: linear-gradient(#3097f7, #0364f4);
-  height: 5.5dvh;
+  height: 6dvh;
   padding: 1vh 15vw;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 2px 0;
+  -webkit-box-shadow: 0px 1px 25px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 25px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 25px 2px rgba(0, 0, 0, 0.75);
+  z-index: 1;
 }
 
 .h1,
@@ -13,7 +16,7 @@
 .h3,
 .h4 {
   color: white;
-  font-weight: 500;
+  font-weight: 550;
 }
 
 .div {
@@ -39,6 +42,7 @@
   padding: 5px;
   border-color: transparent;
 }
+
 
 @media (max-width: 1366px) {
   .header {
