--- a/src/ui/program.module.css
+++ b/src/ui/program.module.css
@@ -4,3 +4,27 @@
   gap: 16px;
   padding: 5vh 15vw;
 }
+
+@media (max-width: 1500px) {
+  .container {
+    grid-template-columns: repeat(4, minmax(180px, 1fr));
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    grid-template-columns: repeat(3, minmax(180px, 1fr));
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(2, minmax(180px, 1fr));
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    grid-template-columns: repeat(1, minmax(180px, 1fr));
+  }
+}
