--- a/src/ui/program.module.css
+++ b/src/ui/program.module.css
@@ -25,6 +25,7 @@
 
 @media (max-width: 576px) {
   .container {
-    grid-template-columns: repeat(1, minmax(180px, 1fr));
+    grid-template-columns: repeat(1, 180px);
+    justify-content: center;
   }
 }
